vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden        # < name of the deployment
  namespace: vaultwarden   # < namespace where place the deployment and pods
  labels:
    app: vaultwarden       # < label for tagging and reference
spec:
  replicas: 1           # < number of pods to deploy
  selector:
    matchLabels:
      app: vaultwarden
  strategy:
    rollingUpdate:
      maxSurge: 0       # < The number of pods that can be created above the desired amount of pods during an update
      maxUnavailable: 1 # < The number of pods that can be unavailable during the update process
    type: RollingUpdate # < New pods are added gradually, and old pods are terminated gradually
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      volumes:
      - name: vaultwarden-data  # < linkname of the volume for the pvc
        hostPath:
          path: /mnt/k3s/vaultwarden-data # < pvc name we created in the previous yaml
      - name: vaultwarden-ssl
        secret:
          secretName: vault-mangelschots-org-tls # < the name ssl certificate, will be created in the ingress yaml
      containers:
      - image: vaultwarden/server:latest # < the name of the docker image we will use
        name: vaultwarden                      # < name of container
        imagePullPolicy: Always             # < always use the latest image when creating container/pod
        env:                                # < the environment variables required (see container documentation)
        - name: PGID
          value: "3000" # < group "user"
        - name: PUID
          value: "3000" # < user "docker"
        - name: TZ
          value: Europe/Brussels
        ports:                              # < the ports required (see container documentation)
         - containerPort: 80
           name: http-80
           protocol: TCP
        volumeMounts:                       # < the volume mount in the container. Look at the relation volumelabel->pvc->pv
         - mountPath: /data               # < mount location in the container
           name: vaultwarden-data               # < volumelabel configured earlier in the yaml file
                                         # < subfolder in the nfs share to be mounted
